--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint" ,
+    "generate-sitemap": "next-sitemap"
   },
   "dependencies": {
     "framer-motion": "^7.6.19",
     "next": "12.3.1",
+    "next-sitemap": "^3.1.54",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
